# pwscup-template

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml
.claude/commands/: check-task.md  evaluate-local.md  implement-phase.md  implement-task.md  phase-status.md
configs/: contest.yaml  whitelist.yaml
data/auxiliary/: sample_ground_truth.json
data/sample/: sample_auxiliary.csv  sample_original.csv  sample_schema.json
docker/: Dockerfile.sandbox
docs/: 01_spec.md  02_specification.md  tutorial.md
docs/tasks/: README.md
examples/anonymize_aggressive/: algorithm.py  metadata.json
examples/anonymize_balanced/: algorithm.py  metadata.json
examples/anonymize_baseline/: algorithm.py  metadata.json
examples/anonymize_example/: algorithm.py  metadata.json
examples/anonymize_mild/: algorithm.py  metadata.json
examples/attack_baseline/: algorithm.py  metadata.json
examples/attack_enhanced/: algorithm.py  metadata.json
examples/attack_strict/: algorithm.py  metadata.json
examples/reidentify_example/: algorithm.py  metadata.json
scripts/: generate_auxiliary.py  generate_data.py  run_demo.py  seed_demo_data.py
src/pwscup/: __init__.py  config.py  schema.py
src/pwscup/cli/: main.py  (+4 more)
tests/: test_config.py  test_data_generation.py  test_db.py  test_models.py  test_schema.py
tests/test_cli/: test_main.py
tests/test_e2e/: test_full_flow.py
tests/test_pipeline/: test_orchestrator.py  test_reidentify.py  test_safety.py  test_scoring.py  test_utility.py
tests/test_sandbox/: test_docker_runner.py  test_whitelist.py
tests/test_web/: test_routes.py
(+88 files in other folders)
